<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BulletZoneClient</string>
    <string name="action_settings">Settings</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="right">RIGHT</string>
    <string name="left">LEFT</string>
    <string name="fire">FIRE</string>
    <string name="join">JOIN</string>
    <string name="leave">LEAVE</string>
    <string name="title_activity_my">MyActivity</string>

    <!-- New strings for Unit and Material Controls -->
    <string name="unit_controls_label">Units</string>
    <string name="material_controls_label">Materials</string>
    <string name="tank">Tank</string>
    <string name="builder">Builder</string>
    <string name="indestructible_wall">Indestructible Wall</string>
    <string name="destructible_wall">Destructible Wall</string>
    <string name="facility">facility</string>
    <string name="units">Units</string>
    <string name="materials">Materials</string>
    <string name="build">Build</string>
    <string name="dismantle">Dismantle</string>
    <string name="cheat">Cheat</string>
    <string name="factory">Factory</string>
    <string name="ejectsoldier">Eject Soldier</string>

</resources>